--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,3 +4,25 @@ body {
   margin:0;
   font-family: 'Urbanist', sans-serif;
 }
+
+.number {
+  background-color: #000000b2 !important;
+}
+
+.basic {
+  background-color: #0a415aa8 !important;
+}
+
+.trigonometric {
+  background-color: #15611bb7 !important;
+  font-size:20px !important;
+}
+
+.advanced {
+  background-color: #a82663c0 !important;
+  font-size:20px !important;
+}
+
+.operation {
+  background-color: #a35d0cc0 !important;
+}
